--- a/GPT_labeling.ipynb
+++ b/GPT_labeling.ipynb
@@ -119,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "173c9aca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('Data/update/cleaned_labeled.csv', index=False)"
+    "df.to_csv('Data/cleaned_labeled.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "37e8c429",
    "metadata": {},
    "outputs": [
@@ -218,10 +218,13 @@
        "       '退款-支付', '礼物/节日', '会员/订阅服务', '烘焙/甜点', '家庭支出-礼物', '礼品/礼物',\n",
        "       '快递/邮政服务', '医疗设备/健康用品', '物流快递', '礼品/保健品', '软件服务费', '烘焙甜点', '办公设备',\n",
        "       '购物/超市购物', '保健品/滋补品', '运动/娱乐', '停车费', '甜品/冰淇淋', '食品采购', '电子产品预付金',\n",
-       "       '科技/互联网服务', '数字娱乐/会员订阅', '交通充值', '家政服务'], dtype=object)"
+       "       '科技/互联网服务', '数字娱乐/会员订阅', '交通充值', '家政服务', '饰品', '公共事业费', '零食甜点',\n",
+       "       '美发', '数码产品租赁', '租金', '鞋履配件', '美妆护肤', '婴幼儿用品', '外卖', '便利店', '数码电子',\n",
+       "       '家庭资助', '公共事业', '会议费', '童装', '旅游住宿', '投资理财', '个护化妆', '个护用品',\n",
+       "       '美容护肤', '数字产品与服务', '文创产品', '打赏'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
